<resources>
    <string name="app_name">Dragon Click</string>
    <string name="click">Click</string>
    <string name="todo">TODO</string>
    <string name="todoa">TODO</string>
    <string name="contador">Contador</string>
    <string name="temporizador">Temporizador</string>
    <string name="_00_00">00:00</string>
    <string name="btadd">+</string>
    <string name="btsub">-</string>
    <string name="digite_o_tempo_limite">Digite o tempo limite.</string>
    <string name="volume">Volume</string>
    <string name="criador">

    Criado por: Elton Ryan Bastos Tavares.\n\n

    Aluno da Instituição Federal do Amazonas Campus Avançado Manacapuru.\n\n

    Cursando Nível Médio Integrado de Programação de Jogos Digitais.\n\n

    Email para contato: eltonryan.bt0@gmail.com\n\n

    Número para contato: (92) 98153-3028\n\n
    </string>
    <string name="tempo_limite">Tempo Limite</string>
    <string name="m_sica">Música</string>
    <string name="todooi">TODO</string>
    <string name="todop">TODO</string>
    <string name="todok">TODO</string>
    <string name="melhor_jogador">Melhor Jogador</string>
    <string name="nome_do_jogador">Nome do jogador</string>
    <string name="media">Média:</string>
    <string name="m_diaclick">Média</string>
</resources>