<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_playing1"
    tools:context=".Partida">

    <ImageButton
        android:id="@+id/bt_click"
        android:layout_width="156dp"
        android:layout_height="151dp"
        android:alpha="0.8"
        android:background="@drawable/round_button_background"
        android:contentDescription="@string/app_name"
        android:onClick="addClick"
        android:src="@drawable/bt_click"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.794"
        tools:ignore="RedundantDescriptionCheck" />

    <TextView
        android:id="@+id/contadorTextView"
        android:layout_width="222dp"
        android:layout_height="39dp"
        android:layout_marginBottom="22dp"
        android:alpha="0.7"
        android:background="@drawable/click"
        android:fontFamily="@font/berkshire_swash"
        android:text="@string/contador"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#C6FFFFFF"
        android:textSize="34sp"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.084"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025" />

    <ImageButton
        android:id="@+id/bt_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.6"
        android:contentDescription="@string/todoa"
        android:padding="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.946"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.977"
        app:srcCompat="@drawable/bt_back"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,ImageContrastCheck" />

    <TextView
        android:id="@+id/temporizadorTextView"
        android:layout_width="113dp"
        android:layout_height="40dp"
        android:background="@drawable/timer"
        android:fontFamily="@font/berkshire_swash"
        android:text="@string/_00_00"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#C6FFFFFF"
        android:textSize="34sp"
        android:alpha="0.7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

</androidx.constraintlayout.widget.ConstraintLayout>